# nova-ed-monitor

./: .gitignore  CLAUDE.md  LICENSE  README.md  install_windows.bat  nova.bat  nova.ps1  nova.sh  pyproject.toml
.github/workflows/: release.yml
ed_monitor/: __main__.py  config.py  db.py  edsm.py  events.py  journal.py  overlay.py  state.py  status.py  tts.py  twitch.py
ed_monitor/ui/: app.py  palette.py  panels.py
