[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-ed-monitor"
version = "1.3.4"
description = "NOVA — Navigation, Operations, and Vessel Assistance for Elite Dangerous"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["elite-dangerous", "journal", "tts", "textual", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.80.0",
    "httpx>=0.27.0",
    "edge-tts>=7.0.0",
]

[project.optional-dependencies]
pygame = ["pygame>=2.5.0"]

[project.scripts]
nova = "ed_monitor.__main__:main"

[project.urls]
Homepage = "https://github.com/KernicDE/nova-ed-monitor"
Repository = "https://github.com/KernicDE/nova-ed-monitor"
"Bug Tracker" = "https://github.com/KernicDE/nova-ed-monitor/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ed_monitor*"]
